# trass-api

./: Cargo.toml
config/: database.toml  logging.toml
src/: main.rs
src/dto/: recommendations.rs
src/dto/recommendations/: generic_info.rs  historic_data.rs  not_enough_data.rs  potential_buy.rs  potential_sell.rs  reduce_price_buy.rs  stop_sell.rs
