[package]
name = "trass-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# trass_core = { git = "https://github.com/skifzzz/trass-core.git" }
trass_core = { path = "../trass-core" }

axum = "0.6.12"
hyper = {version = "0.14.25", features = ["full"]}
tokio = {version = "1.27.0", features = ["full"]}
tower = "0.4.13"

log="0.4.17"
#potentially use pico for arguments like host:port 
pico-args = "0.5.0"
anyhow = "1.0"
env_logger="0.10.0"
serde_json = "1.0.95"
serde = { version = "1.0.159", features = ["serde_derive"] }
tower-http = { version = "0.4.0", features = ["cors"] }
http = "0.2.9"
